# MultiSorce-Candidate-Data-Transformer

./: README.md  main.py  pyproject.toml  requirements.txt
configs/: app.yaml  custom_projection.json  default_projection.json  logging.yaml
outputs/: custom_result.json  result.js
samples/: README.md
samples/recruiter_csv/: ankush_saha.csv
src/candidate_transformer/: __init__.py
src/candidate_transformer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/candidate_transformer/app/: __init__.py  cli.py
src/candidate_transformer/confidence/: __init__.py  scorer.py  signals.py
src/candidate_transformer/config/: __init__.py  loader.py  logging.py
src/candidate_transformer/errors/: __init__.py  error_report.py  exceptions.py
src/candidate_transformer/extraction/: __init__.py  fact.py  resume_section_extractor.py
src/candidate_transformer/identity/: __init__.py  candidate_matcher.py
src/candidate_transformer/merge/: __init__.py  conflict.py  resolver.py  rules.py
src/candidate_transformer/models/: __init__.py  canonical.py  projected_output.py  source_record.py
src/candidate_transformer/normalization/: __init__.py  country.py  dates.py  emails.py  locations.py  names.py  normalizer.py  phone.py  phones.py  skills.py
src/candidate_transformer/projection/: __init__.py  config_loader.py  path_resolver.py  projector.py
tests/: test_cli.py  test_confidence.py  test_merge_engine.py  test_normalization.py  test_projection.py  test_recruiter_csv.py  test_resume_pdf.py  test_validation.py
(+11 files in other folders)
