[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "candidate-transformer"
version = "0.1.0"
description = "Deterministic multi-source candidate data transformer with merge, provenance, and runtime projection."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0.2,<7.0.0",
  "jsonschema>=4.23.0,<5.0.0",
  "pydantic>=2.8.0,<3.0.0",
  "pandas>=2.2.0,<3.0.0",
  "pdfplumber>=0.11.0,<1.0.0",
  "phonenumbers>=8.13.0,<9.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "reportlab>=4.2.0,<5.0.0",
]

[project.scripts]
candidate-transformer = "candidate_transformer.app.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
